updating resoucres apis